third_party/move/move-compiler/tests/move_check/simplifier/moved_var_not_simplified2.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/simplifier/moved_var_not_simplified2.move:5:18
  │
4 │         let y = move x;
  │                 ------
  │                 │
  │                 The value of 'x' was previously moved here.
  │                 Suggestion: use 'copy x' to avoid the move.
5 │         let _z = x;
  │                  ^ Invalid usage of previously moved variable 'x'.

